# raytracing-in-one-weekend

./: .gitignore  Cargo.toml  README.md  imgui.ini  raytracer.config.ron  stats.txt
data/config/: raytracer.config.ron
data/models/teapot/: pyramid.glb  teapot.glb
data/shaders/: quad.frag  quad.vert  ui.frag  ui.vert
math/src/: color_palette.rs  colors.rs  lib.rs  mat4.rs  polynomial.rs  quat.rs  ray.rs  vec2.rs  vec3.rs  vec4.rs
raytracer/: Cargo.toml  README.md
raytracer/src/: aabb3.rs  block.rs  bvh.rs  camera.rs  checker_texture.rs  cone.rs  constant_medium.rs  cylinder.rs  dielectric.rs  diffuse_light.rs  flip_face.rs  generic_handle.rs  geometry_import.rs  hittable.rs  hittable_list.rs  hyperboloid.rs  image_texture.rs  isotropic.rs  lambertian.rs  main.rs  material.rs  metal.rs  noise_texture.rs  onb.rs  paraboloid.rs  pdf.rs  perlin.rs  rectangles.rs  sampling.rs  solid_color_texture.rs  sphere.rs  texture.rs  transform.rs  triangle_mesh.rs  types.rs  ui.rs
raytracer/src/objects/: disk.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
sys/src/: window_x11.rs
