[package]
authors = [ "ahodos" ]
edition = "2021"
name    = "raytracer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
    fp_double_precision = []

[dependencies]
    math = { path = "../math" }
    rendering = { path = "../rendering" }
    rand = "*"
    num = "0.2"
    num-traits = "0.2"
    glfw = "0.52.0"
    imgui = "0.11.0"
    serde = { version = "*", features = ["derive"] }
    ron = "*"
    humantime = "*"
    image = "*"
    chrono = "*"
    gltf = "1.2"
    # mmap-rs = "0.5.0"
    mmapio = "0.9.1"
    rayon = "1.7.0"
    slice-of-array = "0.3.2"
